# nh_NoteTaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.c  interface.txt  main.c  makefile  nhnt.h  spec.txt  ui.c
.github/workflows/: c-cpp.yml  c.yml
